--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
 	},
 	"pnpm": {
 		"peerDependencyRules": {
-		  "ignoreMissing": [
-			"@algolia/client-search"
-		  ]
+			"ignoreMissing": [
+				"@algolia/client-search"
+			]
 		}
-	  },
-	  "scripts": {
+	},
+	"scripts": {
 		"docs:dev": "vitepress dev docs",
 		"docs:build": "vitepress build docs",
 		"docs:serve": "vitepress serve docs"
-	  }
+	},
+	"packageManager": "pnpm@9.1.1+sha512.14e915759c11f77eac07faba4d019c193ec8637229e62ec99eefb7cf3c3b75c64447882b7c485142451ee3a6b408059cdfb7b7fa0341b975f12d0f7629c71195"
 }
